--- a/templates/show.html
+++ b/templates/show.html
@@ -5,34 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>User</title>
+    <title>Show User</title>
 </head>
 <body>
-    <h1 class="text-center">Users</h1>
-    <table class="table table-hover">
+    <h1 class="text-center">This User</h1>
+    <table class="table table-info col-6">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Created At</th>
-                <th>Actions</th>
+                <td>Id</td>
+                <td>First Name</td>
+                <td>Last Name</td>
+                <td>Email</td>
+                <td>Created On</td>
+                <td>Updated On</td>
             </tr>
         </thead>
         <tbody>
-            {% for user in users%}
             <tr>
                 <td>{{user.id}}</td>
                 <td>{{user.first_name}}</td>
                 <td>{{user.last_name}}</td>
                 <td>{{user.email}}</td>
                 <td>{{user.created_at}}</td>
-                <td><a href="/user/show/{{user.id}}">Show</a> | <a href="/user/edit/{{user.id}}">Edit</a>| <a href="/user/delete/{{user.id}}">Delete</a> </td>
+                <td>{{user.updated_at}}</td>
             </tr>
-            {% endfor%}
         </tbody>
     </table>
-    <a href="/users/new" class="btn btn-primary">Add new user</a>
+    <a href="/user/edit/{{user.id}}">Edit</a> | <a href="/users">Home</a>
 </body>
 </html>
